// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Carousel Default renders correctly 1`] = `
<jest>
  <div
    class="ecl-carousel"
    data-ecl-auto-init="Carousel"
  >
    <div
      class="ecl-carousel__container"
    >
      <div
        class="ecl-carousel__slides"
        id="ecl-carousel-slider"
      >
        <div
          aria-label="slide 1 of 3"
          class="ecl-carousel__slide"
          role="group"
        >
          <section
            class="ecl-page-banner ecl-page-banner--image"
          >
            <div
              class="ecl-page-banner__image"
              style="background-image:url(https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg)"
            />
            <div
              class="ecl-container"
            >
              <div
                class="ecl-page-banner__container"
              >
                <div
                  class="ecl-page-banner__content"
                >
                  <div
                    class="ecl-page-banner__title"
                  >
                    Lorem ipsum dolor sit amet
                  </div>
                  <p
                    class="ecl-page-banner__description"
                  >
                    Nullam sollicitudin suscipit diam, ac blandit ipsum tempor consectetur
                  </p>
                  <div
                    class="ecl-page-banner__cta"
                  >
                    <a
                      aria-label="Subscribe"
                      class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after ecl-page-banner__link-cta"
                      href="/example"
                    >
                      <span
                        class="ecl-link__label"
                      >
                        Subscribe
                      </span>
                      <svg
                        aria-hidden="true"
                        class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
                        focusable="false"
                      >
                        <use
                          xlink:href="/icons.svg#corner-arrow"
                        />
                      </svg>
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </section>
        </div>
        <div
          aria-label="slide 2 of 3"
          class="ecl-carousel__slide"
          role="group"
        >
          <section
            class="ecl-page-banner ecl-page-banner--image-gradient"
          >
            <div
              class="ecl-page-banner__image"
              style="background-image:url(https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg)"
            />
            <div
              class="ecl-container"
            >
              <div
                class="ecl-page-banner__container"
              >
                <div
                  class="ecl-page-banner__content"
                >
                  <div
                    class="ecl-page-banner__title"
                  >
                    Duis vitae pulvinar turpis
                  </div>
                  <p
                    class="ecl-page-banner__description"
                  >
                    Integer quis lorem tellus. Nullam sollicitudin suscipit diam, ac blandit ipsum tempor consectetur
                  </p>
                  <div
                    class="ecl-page-banner__cta"
                  >
                    <a
                      aria-label="Subscribe"
                      class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after ecl-page-banner__link-cta"
                      href="/example"
                    >
                      <span
                        class="ecl-link__label"
                      >
                        Subscribe
                      </span>
                      <svg
                        aria-hidden="true"
                        class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
                        focusable="false"
                      >
                        <use
                          xlink:href="/icons.svg#corner-arrow"
                        />
                      </svg>
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </section>
        </div>
        <div
          aria-label="slide 3 of 3"
          class="ecl-carousel__slide"
          role="group"
        >
          <section
            class="ecl-page-banner ecl-page-banner--image-shade"
          >
            <div
              class="ecl-page-banner__image"
              style="background-image:url(https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg)"
            />
            <div
              class="ecl-container"
            >
              <div
                class="ecl-page-banner__container"
              >
                <div
                  class="ecl-page-banner__content"
                >
                  <div
                    class="ecl-page-banner__title"
                  >
                    Donec maximus pharetra ex a ultricies
                  </div>
                  <p
                    class="ecl-page-banner__description"
                  >
                    Integer quis lorem tellus. Nullam sollicitudin suscipit diam, ac blandit ipsum tempor consectetur. Duis vitae pulvinar turpis. Donec maximus pharetra ex a ultricies
                  </p>
                  <div
                    class="ecl-page-banner__cta"
                  >
                    <a
                      aria-label="Subscribe"
                      class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after ecl-page-banner__link-cta"
                      href="/example"
                    >
                      <span
                        class="ecl-link__label"
                      >
                        Subscribe
                      </span>
                      <svg
                        aria-hidden="true"
                        class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
                        focusable="false"
                      >
                        <use
                          xlink:href="/icons.svg#corner-arrow"
                        />
                      </svg>
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </section>
        </div>
      </div>
    </div>
    <div
      class="ecl-carousel__controls"
    >
      <button
        aria-hidden="true"
        class="ecl-carousel__prev"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-icon--rotate-270 ecl-icon--inverted ecl-u-d-block"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
        <span
          class="ecl-u-sr-only"
        >
          Previous slides
        </span>
      </button>
      <button
        aria-hidden="true"
        class="ecl-carousel__next"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-icon--rotate-90 ecl-icon--inverted ecl-u-d-block"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
        <span
          class="ecl-u-sr-only"
        >
          Next slides
        </span>
      </button>
      <div
        class="ecl-container"
      >
        <button
          aria-hidden="true"
          class="ecl-carousel__toggle"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--l ecl-icon--inverted"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#pause"
            />
          </svg>
          <span
            class="ecl-u-sr-only"
          >
            Carousel auto play
          </span>
        </button>
        <div
          class="ecl-carousel__pagination"
        >
          <span
            class="ecl-carousel__current"
          >
            1
          </span>
           of 
          <span
            class="ecl-carousel__max"
          >
            3
          </span>
        </div>
        <div
          class="ecl-carousel__navigation"
        >
          <button
            class="ecl-carousel__navigation-item"
          >
            <span
              class="ecl-u-sr-only"
            >
              Go to slide 1
            </span>
          </button>
          <button
            class="ecl-carousel__navigation-item"
          >
            <span
              class="ecl-u-sr-only"
            >
              Go to slide 2
            </span>
          </button>
          <button
            class="ecl-carousel__navigation-item"
          >
            <span
              class="ecl-u-sr-only"
            >
              Go to slide 3
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</jest>
`;

exports[`Carousel Default renders correctly with extra attributes 1`] = `
<jest>
  <div
    class="ecl-carousel"
    data-ecl-auto-init="Carousel"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <div
      class="ecl-carousel__container"
    >
      <div
        class="ecl-carousel__slides"
        id="ecl-carousel-slider"
      >
        <div
          aria-label="slide 1 of 3"
          class="ecl-carousel__slide"
          role="group"
        >
          <section
            class="ecl-page-banner ecl-page-banner--image"
          >
            <div
              class="ecl-page-banner__image"
              style="background-image:url(https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg)"
            />
            <div
              class="ecl-container"
            >
              <div
                class="ecl-page-banner__container"
              >
                <div
                  class="ecl-page-banner__content"
                >
                  <div
                    class="ecl-page-banner__title"
                  >
                    Lorem ipsum dolor sit amet
                  </div>
                  <p
                    class="ecl-page-banner__description"
                  >
                    Nullam sollicitudin suscipit diam, ac blandit ipsum tempor consectetur
                  </p>
                  <div
                    class="ecl-page-banner__cta"
                  >
                    <a
                      aria-label="Subscribe"
                      class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after ecl-page-banner__link-cta"
                      href="/example"
                    >
                      <span
                        class="ecl-link__label"
                      >
                        Subscribe
                      </span>
                      <svg
                        aria-hidden="true"
                        class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
                        focusable="false"
                      >
                        <use
                          xlink:href="/icons.svg#corner-arrow"
                        />
                      </svg>
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </section>
        </div>
        <div
          aria-label="slide 2 of 3"
          class="ecl-carousel__slide"
          role="group"
        >
          <section
            class="ecl-page-banner ecl-page-banner--image-gradient"
          >
            <div
              class="ecl-page-banner__image"
              style="background-image:url(https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg)"
            />
            <div
              class="ecl-container"
            >
              <div
                class="ecl-page-banner__container"
              >
                <div
                  class="ecl-page-banner__content"
                >
                  <div
                    class="ecl-page-banner__title"
                  >
                    Duis vitae pulvinar turpis
                  </div>
                  <p
                    class="ecl-page-banner__description"
                  >
                    Integer quis lorem tellus. Nullam sollicitudin suscipit diam, ac blandit ipsum tempor consectetur
                  </p>
                  <div
                    class="ecl-page-banner__cta"
                  >
                    <a
                      aria-label="Subscribe"
                      class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after ecl-page-banner__link-cta"
                      href="/example"
                    >
                      <span
                        class="ecl-link__label"
                      >
                        Subscribe
                      </span>
                      <svg
                        aria-hidden="true"
                        class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
                        focusable="false"
                      >
                        <use
                          xlink:href="/icons.svg#corner-arrow"
                        />
                      </svg>
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </section>
        </div>
        <div
          aria-label="slide 3 of 3"
          class="ecl-carousel__slide"
          role="group"
        >
          <section
            class="ecl-page-banner ecl-page-banner--image-shade"
          >
            <div
              class="ecl-page-banner__image"
              style="background-image:url(https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg)"
            />
            <div
              class="ecl-container"
            >
              <div
                class="ecl-page-banner__container"
              >
                <div
                  class="ecl-page-banner__content"
                >
                  <div
                    class="ecl-page-banner__title"
                  >
                    Donec maximus pharetra ex a ultricies
                  </div>
                  <p
                    class="ecl-page-banner__description"
                  >
                    Integer quis lorem tellus. Nullam sollicitudin suscipit diam, ac blandit ipsum tempor consectetur. Duis vitae pulvinar turpis. Donec maximus pharetra ex a ultricies
                  </p>
                  <div
                    class="ecl-page-banner__cta"
                  >
                    <a
                      aria-label="Subscribe"
                      class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after ecl-page-banner__link-cta"
                      href="/example"
                    >
                      <span
                        class="ecl-link__label"
                      >
                        Subscribe
                      </span>
                      <svg
                        aria-hidden="true"
                        class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
                        focusable="false"
                      >
                        <use
                          xlink:href="/icons.svg#corner-arrow"
                        />
                      </svg>
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </section>
        </div>
      </div>
    </div>
    <div
      class="ecl-carousel__controls"
    >
      <button
        aria-hidden="true"
        class="ecl-carousel__prev"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-icon--rotate-270 ecl-icon--inverted ecl-u-d-block"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
        <span
          class="ecl-u-sr-only"
        >
          Previous slides
        </span>
      </button>
      <button
        aria-hidden="true"
        class="ecl-carousel__next"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-icon--rotate-90 ecl-icon--inverted ecl-u-d-block"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
        <span
          class="ecl-u-sr-only"
        >
          Next slides
        </span>
      </button>
      <div
        class="ecl-container"
      >
        <button
          aria-hidden="true"
          class="ecl-carousel__toggle"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--l ecl-icon--inverted"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#pause"
            />
          </svg>
          <span
            class="ecl-u-sr-only"
          >
            Carousel auto play
          </span>
        </button>
        <div
          class="ecl-carousel__pagination"
        >
          <span
            class="ecl-carousel__current"
          >
            1
          </span>
           of 
          <span
            class="ecl-carousel__max"
          >
            3
          </span>
        </div>
        <div
          class="ecl-carousel__navigation"
        >
          <button
            class="ecl-carousel__navigation-item"
          >
            <span
              class="ecl-u-sr-only"
            >
              Go to slide 1
            </span>
          </button>
          <button
            class="ecl-carousel__navigation-item"
          >
            <span
              class="ecl-u-sr-only"
            >
              Go to slide 2
            </span>
          </button>
          <button
            class="ecl-carousel__navigation-item"
          >
            <span
              class="ecl-u-sr-only"
            >
              Go to slide 3
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</jest>
`;

exports[`Carousel Default renders correctly with extra class names 1`] = `
<jest>
  <div
    class="ecl-carousel custom-class custom-class--test"
    data-ecl-auto-init="Carousel"
  >
    <div
      class="ecl-carousel__container"
    >
      <div
        class="ecl-carousel__slides"
        id="ecl-carousel-slider"
      >
        <div
          aria-label="slide 1 of 3"
          class="ecl-carousel__slide"
          role="group"
        >
          <section
            class="ecl-page-banner ecl-page-banner--image"
          >
            <div
              class="ecl-page-banner__image"
              style="background-image:url(https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg)"
            />
            <div
              class="ecl-container"
            >
              <div
                class="ecl-page-banner__container"
              >
                <div
                  class="ecl-page-banner__content"
                >
                  <div
                    class="ecl-page-banner__title"
                  >
                    Lorem ipsum dolor sit amet
                  </div>
                  <p
                    class="ecl-page-banner__description"
                  >
                    Nullam sollicitudin suscipit diam, ac blandit ipsum tempor consectetur
                  </p>
                  <div
                    class="ecl-page-banner__cta"
                  >
                    <a
                      aria-label="Subscribe"
                      class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after ecl-page-banner__link-cta"
                      href="/example"
                    >
                      <span
                        class="ecl-link__label"
                      >
                        Subscribe
                      </span>
                      <svg
                        aria-hidden="true"
                        class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
                        focusable="false"
                      >
                        <use
                          xlink:href="/icons.svg#corner-arrow"
                        />
                      </svg>
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </section>
        </div>
        <div
          aria-label="slide 2 of 3"
          class="ecl-carousel__slide"
          role="group"
        >
          <section
            class="ecl-page-banner ecl-page-banner--image-gradient"
          >
            <div
              class="ecl-page-banner__image"
              style="background-image:url(https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg)"
            />
            <div
              class="ecl-container"
            >
              <div
                class="ecl-page-banner__container"
              >
                <div
                  class="ecl-page-banner__content"
                >
                  <div
                    class="ecl-page-banner__title"
                  >
                    Duis vitae pulvinar turpis
                  </div>
                  <p
                    class="ecl-page-banner__description"
                  >
                    Integer quis lorem tellus. Nullam sollicitudin suscipit diam, ac blandit ipsum tempor consectetur
                  </p>
                  <div
                    class="ecl-page-banner__cta"
                  >
                    <a
                      aria-label="Subscribe"
                      class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after ecl-page-banner__link-cta"
                      href="/example"
                    >
                      <span
                        class="ecl-link__label"
                      >
                        Subscribe
                      </span>
                      <svg
                        aria-hidden="true"
                        class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
                        focusable="false"
                      >
                        <use
                          xlink:href="/icons.svg#corner-arrow"
                        />
                      </svg>
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </section>
        </div>
        <div
          aria-label="slide 3 of 3"
          class="ecl-carousel__slide"
          role="group"
        >
          <section
            class="ecl-page-banner ecl-page-banner--image-shade"
          >
            <div
              class="ecl-page-banner__image"
              style="background-image:url(https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg)"
            />
            <div
              class="ecl-container"
            >
              <div
                class="ecl-page-banner__container"
              >
                <div
                  class="ecl-page-banner__content"
                >
                  <div
                    class="ecl-page-banner__title"
                  >
                    Donec maximus pharetra ex a ultricies
                  </div>
                  <p
                    class="ecl-page-banner__description"
                  >
                    Integer quis lorem tellus. Nullam sollicitudin suscipit diam, ac blandit ipsum tempor consectetur. Duis vitae pulvinar turpis. Donec maximus pharetra ex a ultricies
                  </p>
                  <div
                    class="ecl-page-banner__cta"
                  >
                    <a
                      aria-label="Subscribe"
                      class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after ecl-page-banner__link-cta"
                      href="/example"
                    >
                      <span
                        class="ecl-link__label"
                      >
                        Subscribe
                      </span>
                      <svg
                        aria-hidden="true"
                        class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
                        focusable="false"
                      >
                        <use
                          xlink:href="/icons.svg#corner-arrow"
                        />
                      </svg>
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </section>
        </div>
      </div>
    </div>
    <div
      class="ecl-carousel__controls"
    >
      <button
        aria-hidden="true"
        class="ecl-carousel__prev"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-icon--rotate-270 ecl-icon--inverted ecl-u-d-block"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
        <span
          class="ecl-u-sr-only"
        >
          Previous slides
        </span>
      </button>
      <button
        aria-hidden="true"
        class="ecl-carousel__next"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-icon--rotate-90 ecl-icon--inverted ecl-u-d-block"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
        <span
          class="ecl-u-sr-only"
        >
          Next slides
        </span>
      </button>
      <div
        class="ecl-container"
      >
        <button
          aria-hidden="true"
          class="ecl-carousel__toggle"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--l ecl-icon--inverted"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#pause"
            />
          </svg>
          <span
            class="ecl-u-sr-only"
          >
            Carousel auto play
          </span>
        </button>
        <div
          class="ecl-carousel__pagination"
        >
          <span
            class="ecl-carousel__current"
          >
            1
          </span>
           of 
          <span
            class="ecl-carousel__max"
          >
            3
          </span>
        </div>
        <div
          class="ecl-carousel__navigation"
        >
          <button
            class="ecl-carousel__navigation-item"
          >
            <span
              class="ecl-u-sr-only"
            >
              Go to slide 1
            </span>
          </button>
          <button
            class="ecl-carousel__navigation-item"
          >
            <span
              class="ecl-u-sr-only"
            >
              Go to slide 2
            </span>
          </button>
          <button
            class="ecl-carousel__navigation-item"
          >
            <span
              class="ecl-u-sr-only"
            >
              Go to slide 3
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</jest>
`;
